--- a/Frontend/GeneradorCodigoIntermedio/angular.json
+++ b/Frontend/GeneradorCodigoIntermedio/angular.json
@@ -7,7 +7,7 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
-          "strict": true
+          "strict": false
         }
       },
       "root": "",
@@ -29,7 +29,10 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/textarea.js",
+              "src/assets/js/analizador.js"
+            ]
           },
           "configurations": {
             "production": {
