--- a/Frontend/GeneradorCodigoIntermedio/tsconfig.json
+++ b/Frontend/GeneradorCodigoIntermedio/tsconfig.json
@@ -5,7 +5,7 @@
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    "strict": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
@@ -15,11 +15,15 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2017",
+    "checkJs": false,
     "module": "es2020",
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "types": [
+      "node"
+   ]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
