--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>gson</artifactId>
             <version>2.8.8</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.github.vbmacher/java-cup-runtime -->
+        <dependency>
+            <groupId>com.github.vbmacher</groupId>
+            <artifactId>java-cup-runtime</artifactId>
+            <version>11b-20160615</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -78,6 +84,45 @@
                                     <type>jar</type>
                                 </artifactItem>
                             </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.github.vbmacher</groupId>
+                <artifactId>cup-maven-plugin</artifactId>
+                <version>11b-20160615</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <cupDefinition>src/main/java/Analizador/parserJAVA.cup</cupDefinition>
+                    <outputDirectory>src/main/java</outputDirectory>
+                    <className>parserJAVA</className>
+                    <symbolsName>symJAVA</symbolsName>
+                    <symbolsInterface>false</symbolsInterface>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>de.jflex</groupId>
+                <artifactId>jflex-maven-plugin</artifactId>
+                <version>1.8.2</version>
+                <executions>
+                    <execution>
+                        <id>jflex</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>src/main/java/</outputDirectory>
+                            <lexDefinitions>
+                                <lexDefinition>src/main/java/Analizador/</lexDefinition>
+                            </lexDefinitions>
+                            <verbose>true</verbose>
                         </configuration>
                     </execution>
                 </executions>
